fix the edit section name and the add question alignment

--- a/testbed/app/assets/stylesheets/application.css
+++ b/testbed/app/assets/stylesheets/application.css
@@ -15,11 +15,11 @@
  */
 
 .close-logic {
-  margin-top: -40px;
+  margin-top: -40px !important;
 }
 
 .add_condition_image {
-  margin-left: 5px;
-  height: 30px;
-  width: 30px;
+  margin-left: 5px !important;
+  height: 30px !important;
+  width: 30px !important; 
 }
